fix/aladinDataEnrichment